@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.12-dev
 
+Force projects that use Apache::TestReportPerl to implement
+report_to() if they use t/REPORT in their projects. [Stas]
+
 Add redirect tests [David Wheeler <david@kineticode.com>]
 
 add -no-httpd runtime option to allow tests to run without configuring,
